--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,11 +1,12 @@
 .about {
-  max-width: 1140px;
+  margin: 0 auto;
   position: absolute;
   top: 40%;
   left: 0;
   right: 0;
   height: fit-content;
   z-index: 1;
+  padding-left: 20px;
 }
 
 .about__name,
