--- a/src/components/Contacts/Contacts.css
+++ b/src/components/Contacts/Contacts.css
@@ -1,9 +1,10 @@
 .contacts {
-  padding-top: 60px;
+  padding: 60px 20px 0 20px;
   padding-bottom: 100px;
   overflow: hidden;
   background-color: var(--color-bg-main2);
   border-radius: 20px;
+  margin: 0 auto 20px auto;
 }
 
 .contacts__title {
