--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 @import url('./vendor/fonts/fonts.css');
+@import './vendor/styles/_reset.css';
 @import './vendor/styles/_variables.css';
 
+html,
 body {
   margin: 0;
+  padding: 0;
   font-family: 'JuraLight';
   background-color: var(--color-bg-main);
   overflow-x: hidden;
@@ -15,10 +18,4 @@ button {
 
 section {
   max-width: 1140px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-* {
-  border: solid 3px red;
 }
