--- a/src/components/CardProject/CardProject.css
+++ b/src/components/CardProject/CardProject.css
@@ -153,13 +153,16 @@
   transition: 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
+@media (max-width: 696px) {
+  .card__title {
+    font-size: 28px;
+  }
+}
+
 @media (max-width: 380px) {
   .card__container {
     width: 280px;
     height: 420px;
     margin: 0;
-  }
-  .card__title {
-    font-size: 28px;
   }
 }
