--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -9,7 +9,7 @@
 .projects__title {
   color: var(--color-bg-neon);
   margin: 0;
-  font-size: 60px;
+  font-size: var(--font-size-80);
   font-weight: normal;
   text-align: center;
   padding-bottom: 60px;
@@ -26,18 +26,18 @@
   padding: 0 10px 40px;
 }
 
-.projects__information {
+.projects__info {
   padding: 0;
 }
 
 .projects__data {
   color: var(--color-bg-secondary);
   text-align: center;
-  font-size: 25px;
+  font-size: var(--font-size-24);
   margin: 30px 0 30px;
 }
 
-.projects__data-span {
+.projects__dataSpan {
   color: var(--color-bg-secondary);
   animation: glowing 6s infinite ease-in;
 }
