--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -12,28 +12,12 @@
 .about__name,
 .about__profession {
   margin: 0;
-  font-size: 100px;
+  font-size: var(--font-size-100);
   font-weight: normal;
   color: var(--color-bg-secondary);
   overflow: hidden;
   white-space: nowrap;
   border-right: 2px solid var(--color-bg-secondary);
-
-  @media (max-width: 796px) {
-    font-size: 80px;
-  }
-
-  @media (max-width: 650px) {
-    font-size: 60px;
-  }
-
-  @media (max-width: 495px) {
-    font-size: 45px;
-  }
-
-  @media (max-width: 420px) {
-    font-size: 36px;
-  }
 }
 
 .about__name {
