--- a/src/components/CardProject/CardProject.css
+++ b/src/components/CardProject/CardProject.css
@@ -38,6 +38,10 @@
 
 .card__links {
   padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  max-width: 50%;
 }
 
 .card__container {
@@ -60,7 +64,7 @@
   @media (max-width: 380px) {
     width: 280px;
     height: 420px;
-    margin: 0; 
+    margin: 0;
   }
 }
 
